Added Google Analytics

--- a/views/head.html
+++ b/views/head.html
@@ -15,6 +15,17 @@
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <script type="text/javascript" src="/js/jquery.modal.min.js"></script>
     <script type="text/javascript" src="/js/jquery-eu-cookie-law-popup.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127398120-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-127398120-1');
+    </script>
+
 </head>
 <body>
 
